@@ -1,3 +1,6 @@
+2005-04-06 David C. HAley <dhaley@hot.rr.com>
+	* crystalspace.sh: update variable names
+
 2005-03-31 David C. Haley <dhaley@hot.rr.com>
 	* DETAILS: Updated md5 field
 
